--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "commander": "^12.0.0",
     "nodemon": "^3.1.0"
   },
   "devDependencies": {
